# zemfrog-theme-template

./: README.md  cookiecutter.json
{{cookiecutter.package_name}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/: README.md  pyproject.toml
